@@ -27,7 +27,7 @@ plugins {
 }
 
 if (!JavaVersion.current().java11Compatible) {
-  throw new GradleException("Java 11 or later is required to build Pantheon.\n" +
+  throw new GradleException("Java 11 or later is required to build EthSigner.\n" +
   "  Detected version ${JavaVersion.current()}")
 }
 
@@ -96,12 +96,7 @@ allprojects {
     }
   }
 
-  dependencies {
-    errorprone("com.google.errorprone:error_prone_core")
-    if (JavaVersion.current().isJava8()) {
-      errorproneJavac("com.google.errorprone:javac")
-    }
-  }
+  dependencies { errorprone("com.google.errorprone:error_prone_core") }
 
   apply plugin: 'com.diffplug.gradle.spotless'
   spotless {
@@ -185,7 +180,13 @@ allprojects {
   test {
     jvmArgs = [
       '-Xmx4g',
-      '-XX:-UseGCOverheadLimit'
+      '-XX:-UseGCOverheadLimit',
+      // Mockito and jackson-databind do some strange reflection during tests.
+      // This suppresses an illegal access warning.
+      '--add-opens',
+      'java.base/java.util=ALL-UNNAMED',
+      '--add-opens',
+      'java.base/java.util.concurrent=ALL-UNNAMED'
     ]
     Set toImport = [
       'root.log.level',
@@ -200,14 +201,9 @@ allprojects {
     useJUnitPlatform()
   }
 
-  // Normalise Xdoclint behaviour across JDKs (OpenJDK 8 is more lenient than Oracle JDK by default).
   javadoc {
     options.addStringOption('Xdoclint:all', '-quiet')
-    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
-      options.addStringOption('Xwerror', '-quiet')
-    } else {
-      options.addStringOption('Xwerror', '-html5')
-    }
+    options.addStringOption('Xwerror', '-html5')
     options.encoding = 'UTF-8'
   }
 
